# AI-Nihongo

./: .env.example  .gitignore  ARCHITECTURE_COMPARISON.md  JLPT_RAG_IMPLEMENTATION.md  MULTI_MODEL_UPDATE.md  Makefile  README.md  STATUS.md  demo.py  main.py  pyproject.toml  requirements.txt  setup.cfg
ai_nihongo/: __init__.py  cli.py
ai_nihongo/api/: main.py
ai_nihongo/core/: agent.py  config.py
ai_nihongo/services/: japanese_processor.py  jlpt_rag_service.py  llm_service.py  model_orchestrator.py  translation_service.py
data/: sample_data.json  sample_vocabulary.json
data/chromadb/cc68a673-3f3a-452e-8c2d-7b609ae7273e/: index_metadata.pickle
docs/: getting_started.md  installation.md
examples/: api_usage.py  basic_usage.py
src/ai_nihongo/: __init__.py
src/ai_nihongo/core/: config.py
src/ai_nihongo/llm/: __init__.py  client.py
src/ai_nihongo/practice/: __init__.py  exercises.py
src/ai_nihongo/ui/: cli.py
src/ai_nihongo/utils/: helpers.py
tests/: conftest.py  test_agent.py
